Services text correction

--- a/portfolio.html
+++ b/portfolio.html
@@ -273,7 +273,7 @@
                             <h2>What I Do</h2>
                         </div>
                         <p>I provide services for those who are looking to build a new website, create engaging visuals, 
-                            or improve your public speaking skills.</p>
+                            or improve their public speaking skills.</p>
                         <a href="#contact" class="primary-btn contact-button">Get Contact Now</a>
                     </div>
                 </div>
@@ -285,7 +285,7 @@
                                     <i class="fa fa-code"></i>
                                 </div>
                                 <h4>Web Development</h4>
-                                <p>I specialize in creating custom web applications and websites that are secure and user-friendly. From simple websites to complex e-commerce, I can bring your vision to life.</p>
+                                <p>I specialize in creating custom web applications and websites that are secure and user-friendly to bring your vision to life.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -294,7 +294,7 @@
                                     <i class="fa fa-object-ungroup"></i>
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>I also create intuitive interfaces that enhance user experience. Whether working independently or in collaboration, I design solutions that reflect companies brand and business processes.</p>
+                                <p>I also create intuitive interfaces that enhance user experience whether working independently or in collaboration.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -303,7 +303,7 @@
                                     <i class="fa fa-palette"></i>
                                 </div>
                                 <h4>Graphic Design</h4>
-                                <p>I offer graphic design services to help clients communicate their message effectively. This includes creating logos, brochures, social media graphics, infographics, and more.</p>
+                                <p>I offer graphic design services to help clients communicate their message including brochures, social media graphics and more.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -312,7 +312,7 @@
                                     <i class="fa-solid fa-person-chalkboard"></i>
                                 </div>
                                 <h4>Public Speaking Formation</h4>
-                                <p>I help individuals to become effective communicators. Equipping them with the tools necessary to deliver engaging presentations that inspire their audience.</p>
+                                <p>I help individuals to become effective communicators, equipping them with the tools necessary to inspire their audience.</p>
                             </div>
                         </div>
                     </div>
