Enhance shooting star

--- a/portfolio.html
+++ b/portfolio.html
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="50">
-                    <div class="team__item team__item--third set-bg" data-setbg="img/team/team.jpg">
+                    <div class="team__item team__item--third set-bg" data-setbg="img/team/team2.jpg">
                         <div class="team__item__text">
                             <p>ENI Oratory Art Club President</p>
                         </div>
@@ -365,9 +365,14 @@
                             <h3>Frameworks &amp; Libraries</h3>
                         </div>
                         <div class="toolbox">
-                            <div class="tool pink">Mysql</div>
-                            <div class="tool pink">PostgreSQL</div>
-                            <div class="tool pink">H2</div>
+                            <div class="tool pink">Spring Boot</div>
+                            <div class="tool pink">Django</div>
+                            <div class="tool pink">Flask</div>
+                            <div class="tool pink">Express JS</div>
+                            <div class="tool pink">React JS</div>
+                            <div class="tool pink">Bootstrap</div>
+                            <div class="tool pink">Material UI</div>
+                            <div class="tool pink">Chackra UI</div>
                         </div>
                     </div>
                 </div>
@@ -385,9 +390,11 @@
                             <h3>Development tools</h3>
                         </div>
                         <div class="toolbox">
-                            <div class="tool purple">Mysql</div>
-                            <div class="tool purple">PostgreSQL</div>
-                            <div class="tool purple">H2</div>
+                            <div class="tool purple">Visual Paradigm</div>
+                            <div class="tool purple">VSCode</div>
+                            <div class="tool purple">Postman</div>
+                            <div class="tool purple">Git</div>
+                            <div class="tool purple">Ollama</div>
                         </div>
                     </div>
                 </div>
@@ -405,9 +412,10 @@
                             <h3>Design &amp; CMS</h3>
                         </div>
                         <div class="toolbox">
-                            <div class="tool red">Mysql</div>
-                            <div class="tool red">PostgreSQL</div>
-                            <div class="tool red">H2</div>
+                            <div class="tool red">Adobe illustrator</div>
+                            <div class="tool red">Canva</div>
+                            <div class="tool red">Figma</div>
+                            <div class="tool red">Wordpress</div>
                         </div>
                     </div>
                 </div>
