Resume images choice

--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="250">
-                    <div class="team__item set-bg" data-setbg="img/team/team1.jpg">
+                    <div class="team__item set-bg" data-setbg="img/team/team.jpg">
                         <div class="team__item__text">
                             <p>Fianarant'Slam Event Responsible</p>
                         </div>
@@ -393,8 +393,10 @@
                             <div class="tool purple">Visual Paradigm</div>
                             <div class="tool purple">VSCode</div>
                             <div class="tool purple">Postman</div>
+                            <div class="tool purple">Llama Studio</div>
                             <div class="tool purple">Git</div>
-                            <div class="tool purple">Ollama</div>
+                            <div class="tool purple">Github</div>
+                            <div class="tool purple">Gitlab</div>
                         </div>
                     </div>
                 </div>
