Services text correction

--- a/portfolio.html
+++ b/portfolio.html
@@ -272,9 +272,9 @@
                             <span>Services</span>
                             <h2>What I Do</h2>
                         </div>
-                        <p>I provide services for those who are looking to build a new website, create engaging visuals, 
-                            or improve their public speaking skills.</p>
-                        <a href="#contact" class="primary-btn contact-button">Get Contact Now</a>
+                        <p>I provide services for those looking to build a new website, create engaging visuals, or improve their public
+                            speaking skills.</p>
+                        <a href="#contact" class="primary-btn contact-button">Get in Touch Now</a>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -285,7 +285,8 @@
                                     <i class="fa fa-code"></i>
                                 </div>
                                 <h4>Web Development</h4>
-                                <p>I specialize in creating custom web applications and websites that are secure and user-friendly to bring your vision to life.</p>
+                                <p>I create custom web applications and websites that are secure and user-friendly, bringing clients'
+                                    vision to life.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -294,7 +295,8 @@
                                     <i class="fa fa-object-ungroup"></i>
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>I also create intuitive interfaces that enhance user experience whether working independently or in collaboration.</p>
+                                <p>I design intuitive interfaces to enhance user experience, working independently or in collaboration.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -303,7 +305,8 @@
                                     <i class="fa fa-palette"></i>
                                 </div>
                                 <h4>Graphic Design</h4>
-                                <p>I offer graphic design services to help clients communicate their message including brochures, social media graphics and more.</p>
+                                <p>I offer graphic design services, including brochures and social media graphics, to help clients
+                                    communicate their message.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -311,8 +314,9 @@
                                 <div class="services__item__icon">
                                     <i class="fa-solid fa-person-chalkboard"></i>
                                 </div>
-                                <h4>Public Speaking Formation</h4>
-                                <p>I help individuals to become effective communicators, equipping them with the tools necessary to inspire their audience.</p>
+                                <h4>Public Speaking Coaching</h4>
+                                <p>I help individuals become effective communicators, equipping them with the tools to inspire their
+                                    audience.</p>
                             </div>
                         </div>
                     </div>
