Case correction to title case

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
                                     class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#contact" class="primary-btn rellax contact-button" data-rellax-speed="2">Get contact now</a>
+                                <a href="#contact" class="primary-btn rellax contact-button" data-rellax-speed="2">Contact Me Now</a>
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="2">
@@ -133,7 +133,7 @@
                                         <i class="fa fa-graduation-cap"></i>
                                     </div>
                                     <h4 class="news__subtitle">
-                                        <i class="fa fa-chart-line"></i> Always going higher and further
+                                        <i class="fa fa-chart-line"></i> Always Going Higher And Further
                                     </h4>
                                     <p>January 17, 2025</p>
                                 </div>
@@ -274,7 +274,7 @@
                         </div>
                         <p>I provide services for those looking to build a new website, create engaging visuals, or improve their public
                             speaking skills.</p>
-                        <a href="#contact" class="primary-btn contact-button">Get in Touch Now</a>
+                        <a href="#contact" class="primary-btn contact-button">Contact Me Now</a>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -391,7 +391,7 @@
                             <i class="fa fa-laptop skills-icon"></i>
                         </div>
                         <div class="stretched-link">
-                            <h3>Development tools</h3>
+                            <h3>Development Tools</h3>
                         </div>
                         <div class="toolbox">
                             <div class="tool purple">Visual Paradigm</div>
