--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <div id="typed-text"></div>
     </div>
     <div id="final-text-container" class="text-center text-white">
-        <p id="final-text">Welcome to my universe!</p>
+        <p id="final-text"><strong>WELCOME</strong> to my 
+            <span class="universe-text">universe!</span>
+        </p>
+        <hr/>
         <a id="final-button" href="/portfolio.html">
             <button id="cta-button">
                 <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
