--- a/portfolio.html
+++ b/portfolio.html
@@ -83,8 +83,8 @@
                     <div class="row">
                         <div class="col-lg-6 hero__text__container">
                             <div class="hero__text">
-                                <h2 class="mb-3">Hello !</h2>
-                                <h2 class="rellax" data-rellax-speed="1.1">I'm Dylan</h2>
+                                <h2 class="mb-3 hello-text">Hello !</h2>
+                                <h2 class="rellax presentation-text" data-rellax-speed="1.1">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
                                     <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" 
                                     class="mb-5">Web developer</span>
