--- a/portfolio.html
+++ b/portfolio.html
@@ -160,60 +160,65 @@
             </div>
             <div class="row">
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="50">
-                    <h3 class="resume-title">Resume</h3>
+                    <h3 class="resume-title">Profile</h3>
                     <div class="resume-item pb-0">
-                    <h4>Brandon Johnson</h4>
-                    <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-                    <ul>
-                        <li>Portland par 127,Orlando, FL</li>
-                        <li>(123) 456-7891</li>
-                        <li>alice.barkley@example.com</li>
-                    </ul>
+                        <h4 class="resume-subtitle">RAKOTONARIVO Dylan Mickaël</h4>
+                        <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+                        <ul>
+                            <li>Portland par 127,Orlando, FL</li>
+                            <li>(123) 456-7891</li>
+                            <li>alice.barkley@example.com</li>
+                        </ul>
                     </div><!-- Edn Resume Item -->
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                    <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                    <h5>2015 - 2016</h5>
-                    <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                    <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                        <h4 class="resume-subtitle">ENI Fianarantsoa, Madagascar</h4>
+                        <h5>2015 - 2016</h5>
+                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
                     </div><!-- Edn Resume Item -->
 
                     <div class="resume-item">
-                    <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                    <h5>2010 - 2014</h5>
-                    <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                    <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                        <h4 class="resume-subtitle">French Expression School "La Pépito"</h4>
+                        <h5>2010 - 2014</h5>
+                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
                     </div><!-- Edn Resume Item -->
 
                 </div>
 
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                    <h3 class="resume-title">Professional Experience</h3>
+                    <h3 class="resume-title">Experiences</h3>
                     <div class="resume-item">
-                    <h4>Senior graphic design specialist</h4>
-                    <h5>2019 - Present</h5>
-                    <p><em>Experion, New York, NY </em></p>
-                    <ul>
-                        <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                        <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                        <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                        <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-                    </ul>
+                        <h4 class="resume-subtitle">Internships</h4>
+                        <h5>2019 - Present</h5>
+                        <p><em>Experion, New York, NY </em></p>
+                        <ul>
+                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                        </ul>
                     </div><!-- Edn Resume Item -->
 
                     <div class="resume-item">
-                    <h4>Graphic design specialist</h4>
-                    <h5>2017 - 2018</h5>
-                    <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                    <ul>
-                        <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                        <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                        <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                        <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-                    </ul>
+                        <h4 class="resume-subtitle">Personal Projects</h4>
+                        <h5>2017 - 2018</h5>
+                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                        <ul>
+                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                        </ul>
                     </div><!-- Edn Resume Item -->
 
+                    <div class="resume-item">
+                        <h4 class="resume-subtitle">Compentitions</h4>
+                        <h5>2017 - 2018</h5>
+                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                        <ul>
+                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                        </ul>
+                    </div><!-- Edn Resume Item -->
                 </div>
             </div>
         </div>
@@ -395,9 +400,9 @@
                         </div>
                         <div class="toolbox">
                             <div class="tool purple">Visual Paradigm</div>
-                            <div class="tool purple">VSCode</div>
+                            <div class="tool purple">VS Code</div>
                             <div class="tool purple">Postman</div>
-                            <div class="tool purple">Llama Studio</div>
+                            <div class="tool purple">LLM Studio</div>
                             <div class="tool purple">Git</div>
                             <div class="tool purple">Github</div>
                             <div class="tool purple">Gitlab</div>
@@ -642,6 +647,19 @@
     <!-- Footer Begin -->
     <footer class="footer">
         <div class="container">
+            <div class="col-lg-12 text-center">
+                <div id="footer__nav__social" class="footer__nav__social d-none py-4">
+                    <a href="https://web.facebook.com/dylan.mickael.58" data-aos="zoom-out">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
+                    <a href="https://github.com/DylanMickael" data-aos="zoom-out" data-aos-delay="100">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282" data-aos="zoom-out" data-aos-delay="200">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
             <div class="footer__copyright">
                 <div class="row gy-5">
                     <div class="col-lg-12 text-center">
@@ -651,19 +669,6 @@
                             </script>
                             All rights reserved
                         </p>
-                    </div>
-                    <div class="col-lg-12 text-center">
-                        <div id="footer__nav__social" class="footer__nav__social d-none py-4">
-                            <a href="https://web.facebook.com/dylan.mickael.58">
-                                <i class="fa-brands fa-square-facebook"></i>
-                            </a>
-                            <a href="https://github.com/DylanMickael">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282">
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
