--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <span class="pt-1">Start exploring</span>
             </button>
         </a>
+        <!-- <img data-aos="fade-up" data-aos-delay="50" class="icon__interface" src="/img/icons/simple/Rocket.png" alt=""> -->
     </div>
     <div id="button-container">
         <a href="/portfolio.html">
