--- a/portfolio.html
+++ b/portfolio.html
@@ -90,11 +90,15 @@
                                     class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#contact" class="primary-btn rellax contact-button" data-rellax-speed="2">Contact Me Now</a>
+                                <a href="#contact" class="primary-btn rellax contact-button" data-rellax-speed="2">
+                                    <i class="fa fa-phone icon__button"></i>
+                                    Contact Me Now
+                                </a>
                             </div>
                         </div>
-                        <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="2">
+                        <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax position-relative"  data-rellax-speed="2">
                             <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
+                            <!-- <img data-aos="fade-up" data-aos-delay="50" class="icon__interface" src="/img/icons/simple/Rocket.png" alt=""> -->
                         </div>
                     </div>
                 </div>
@@ -106,7 +110,7 @@
     <!-- Hero Section End -->
 
     <!-- News Section Begin -->
-    <section id="news" data-aos="zoom-out-up" class="about">
+    <section id="news" data-aos="fade-up" class="about">
         <div class="container">
             <div class="section-title news-title">
                 <span>News</span>
@@ -124,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-left" data-aos-delay="150">
                     <div class="about__text">
                         <div class="row">
                             <div class="col-lg-12">
@@ -152,7 +156,7 @@
     <!-- News Section End -->
 
     <!-- Resume Section Begin -->
-    <section id="resume" data-aos="fade-up" class="resume">
+    <section id="resume" data-aos="fade-in" class="resume">
         <div class="container">
             <div class="section-title">
                 <span>Resume</span>
@@ -258,7 +262,10 @@
                 </div>
                 <div class="col-lg-12 p-0">
                     <div class="team__btn">
-                        <a id="btn-download-cv" href="#" class="primary-btn">Download My Resume</a>
+                        <a id="btn-download-cv" href="#" class="primary-btn">
+                            <i class="fa fa-download icon__button"></i>
+                            Download My Resume
+                        </a>
                     </div>
                 </div>
             </div>
@@ -268,7 +275,7 @@
     <!-- Resume Section End -->
 
     <!-- Services Section Begin -->
-    <section id="services" data-aos="zoom-in" class="services">
+    <section id="services" data-aos="fade-in" class="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -279,13 +286,16 @@
                         </div>
                         <p>I provide services for those looking to build a new website, create engaging visuals, or improve their public
                             speaking skills.</p>
-                        <a href="#contact" class="primary-btn contact-button">Contact Me Now</a>
+                        <a href="#contact" class="primary-btn contact-button">
+                            <i class="fa fa-phone icon__button"></i>
+                            Contact Me Now
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="services__item">
+                            <div class="services__item" data-aos="fade-left" data-aos-delay="50">
                                 <div class="services__item__icon">
                                     <i class="fa fa-code"></i>
                                 </div>
@@ -295,7 +305,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="services__item">
+                            <div class="services__item" data-aos="fade-left" data-aos-delay="110">
                                 <div class="services__item__icon">
                                     <i class="fa fa-object-ungroup"></i>
                                 </div>
@@ -305,7 +315,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="services__item">
+                            <div class="services__item" data-aos="fade-left" data-aos-delay="170">
                                 <div class="services__item__icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
@@ -315,7 +325,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="services__item">
+                            <div class="services__item" data-aos="fade-left" data-aos-delay="230">
                                 <div class="services__item__icon">
                                     <i class="fa-solid fa-person-chalkboard"></i>
                                 </div>
@@ -333,7 +343,7 @@
     <!-- Services Section End -->
     
     <!-- Skills Section -->
-    <section id="skills" data-aos="fade-up" class="skills section">
+    <section id="skills" data-aos="fade-in" class="skills section">
         <div class="container">
             <div class="section-title">
                 <span>Skills</span>
@@ -437,7 +447,7 @@
     <!-- /Services Section -->
 
     <!-- Projects Section Begin -->
-    <section id="projects" data-aos="fade-up" class="portfolio">
+    <section id="projects" data-aos="fade-in" class="portfolio">
         <div class="container">
             <div class="section-title">
                 <span>Projects</span>
@@ -559,7 +569,7 @@
     <!-- Projects Section End -->
 
     <!-- Contact Section Begin -->
-    <section id="contact" data-aos="fade-out" class="contact-widget">
+    <section id="contact" data-aos="fade-in" class="contact-widget">
         <div class="container">
             <div class="section-title">
                 <span>Contact</span>
@@ -569,7 +579,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="contact__widget__item">
+                            <div class="contact__widget__item" data-aos="fade-right" data-aos-delay="30">
                                 <div class="services__item__icon">
                                     <i class="fa fa-map-location-dot"></i>
                                 </div>
@@ -580,7 +590,7 @@
                             </div>
                         </div>
                         <div class="col-lg-12">
-                            <div class="contact__widget__item">
+                            <div class="contact__widget__item" data-aos="fade-right" data-aos-delay="60">
                                 <div class="services__item__icon">
                                     <i class="fa fa-phone"></i>
                                 </div>
@@ -591,7 +601,7 @@
                             </div>
                         </div>
                         <div class="col-lg-12">
-                            <div class="contact__widget__item">
+                            <div class="contact__widget__item" data-aos="fade-right" data-aos-delay="90">
                                 <div class="services__item__icon">
                                     <i class="fa fa-envelope-open"></i>
                                 </div>
@@ -606,7 +616,7 @@
                 <div class="col-lg-6">
                     <div class="row mt-4">
                         <div class="col-lg-12 col-md-12">
-                            <div class="card">
+                            <div class="card" data-aos="fade-left" data-aos-delay="50">
                                 <div class="contact__form">
                                     <form id="contact-form">
                                         <input id="name" type="text" placeholder="Name" required>
