Illustration placement implementation

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,6 @@
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax position-relative"  data-rellax-speed="2">
                             <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
-                            <!-- <img data-aos="fade-up" data-aos-delay="50" class="icon__interface" src="/img/icons/simple/Rocket.png" alt=""> -->
                         </div>
                     </div>
                 </div>
@@ -152,6 +151,7 @@
                 </div>
             </div>
         </div>
+        <!-- <img data-aos="fade-left" class="illustration" src="/img/illustrations/arrows/Arrow 07.png" alt=""> -->
     </section>
     <!-- News Section End -->
 
