--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax position-relative"  data-rellax-speed="2">
-                            <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
+                            <img data-aos="fade-right" class="hero__image" src="img/hero/heroBlue.png" alt="">
                         </div>
                     </div>
                 </div>
