Added light to news section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="typed-text"></div>
     </div>
     <div id="final-text-container" class="text-center text-white">
-        <p id="final-text"><strong>WELCOME</strong> to my 
+        <p id="final-text"><strong class="welcome">WELCOME</strong> to my 
             <span class="universe-text">universe!</span>
         </p>
         <hr/>
