--- a/portfolio.html
+++ b/portfolio.html
@@ -151,6 +151,7 @@
                 </div>
             </div>
         </div>
+        <div class="ball" data-aos="fade-in" data-aos-delay="400"></div>
         <!-- <img data-aos="fade-left" class="illustration" src="/img/illustrations/arrows/Arrow 07.png" alt=""> -->
     </section>
     <!-- News Section End -->
