Added YOLO to LM models

--- a/portfolio.html
+++ b/portfolio.html
@@ -438,6 +438,7 @@
                             <div class="tool red">Gemini</div>
                             <div class="tool red">Bamboo LM</div>
                             <div class="tool red">Cohere</div>
+                            <div class="tool red">YOLO</div>
                         </div>
                     </div>
                 </div>
