Updated framewoks and librairies

--- a/portfolio.html
+++ b/portfolio.html
@@ -387,7 +387,7 @@
                         <div class="toolbox">
                             <div class="tool pink">Spring Boot</div>
                             <div class="tool pink">Django</div>
-                            <div class="tool pink">Flask</div>
+                            <div class="tool pink">Fast API</div>
                             <div class="tool pink">Express JS</div>
                             <div class="tool pink">React JS</div>
                             <div class="tool pink">Bootstrap</div>
