--- a/portfolio.html
+++ b/portfolio.html
@@ -488,10 +488,11 @@
             <div class="row portfolio__gallery">
                 <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-1.jpg">
+                        <!-- Project image in data-setbg -->
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
@@ -501,20 +502,22 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-2.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
-                            <span>Photography</span>
+                            <ul>
+                                <li>Photography</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix web">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-3.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
@@ -524,10 +527,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-4.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
@@ -537,20 +540,22 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-5.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
-                            <span>Photography</span>
+                            <ul>
+                                <li>Photography</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-6.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
@@ -560,10 +565,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix web">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-7.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
@@ -573,20 +578,22 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-8.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
-                            <span>Photography</span>
+                            <ul>
+                                <li>Photography</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-9.jpg">
+                        <div class="portfolio__item__image set-bg" data-setbg="">
+                            <i class="fa fa-image text-white fa-xl"></i>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
                             <ul>
                                 <li>eCommerce</li>
                                 <li>Magento</li>
