Removed project section container

--- a/portfolio.html
+++ b/portfolio.html
@@ -479,126 +479,136 @@
     <!-- /Services Section -->
 
     <!-- Projects Section Begin -->
-    <section id="projects" data-aos="fade-in" class="portfolio">
-        <div class="container">
-            <div class="section-title">
-                <span>Projects</span>
-                <h2>My achievements?</h2>
+    <section id="projects" data-aos="fade-in" class="portfolio mx-5">
+        <div class="section-title">
+            <span>Projects</span>
+            <h2>My achievements?</h2>
+        </div>
+        <div class="row portfolio__gallery">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+                <div class="portfolio__item">
+                    <!-- Project image in data-setbg -->
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="row portfolio__gallery">
-                <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
-                    <div class="portfolio__item">
-                        <!-- Project image in data-setbg -->
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>Photography</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix web">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>Photography</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix web">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>Photography</li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-image text-white fa-xl"></i>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item__image set-bg" data-setbg="">
-                            <i class="fa fa-image text-white fa-xl"></i>
-                        </div>
-                        <div class="portfolio__item__text">
-                            <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
-                            </ul>
-                        </div>
+                    <div class="portfolio__item__text">
+                        <h4>Title</h4>
+                        <ul>
+                            <li>Stack 1</li>
+                            <li>Stack 2</li>
+                        </ul>
                     </div>
                 </div>
             </div>
