Replaced alert by toast

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css" type="text/css">
+    <link rel="stylesheet" href="css/toastify.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="vendors/aos/aos.css" type="text/css">
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
@@ -745,13 +745,13 @@
     <script src="js/anime.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/email.min.js"></script>
+    <script src="js/toastify-js.js"></script>
     <script src="js/rellax.js"></script>
     <script src="js/theatre.js"></script>
     <script src="js/main.js"></script>
@@ -761,7 +761,7 @@
         VANTA.GLOBE({
             el: "#hero",
             backgroundColor: "#000116",
-            color: "#020870",
+            color: "#020860",
             color2: "#000116",
             mouseControls: true,
             touchControls: true,
